--- a/question_set_one_a.html
+++ b/question_set_one_a.html
@@ -66,46 +66,40 @@
   </h2>
   <div class="ui eight column centered grid">
     <form class="ui form">
+      <!-- Question one -->
       <div class="field">
         <label>WAS THIS UNIVERSITY YOUR FIRST CHOICE?</label>
         <button class="ui secondary button" type="button" name="yes-button">Yes</button>
         <button class="ui secondary button" type="button" name="no-button">no</button>
       </div>
+      <!-- Question two -->
       <div class="field">
           <label>WHAT WAS THE DEFINING FACTOR IN YOUR DECISION TO ATTEND THIS UNIVERSITY?</label>
           <textarea></textarea>
         </div>
+        <!-- Question three -->
+        <!--  Did any of these factor into your decision to attend this school-->
+        <p><span class="multiple-select">DID ANY OF THESE FACTORS INFLUENCE YOUR DECISION TO ATTEND THIS UNIVERSITY?</span></p>
+        <div class="ui equal width center aligned padded grid selection">
+          <div class="field">
+    <label>Gender</label>
+    <div class="ui selection dropdown">
+        <input type="hidden" name="gender">
+        <i class="dropdown icon"></i>
+        <div class="default text">Gender</div>
+        <div class="menu">
+            <div class="item" data-value="1">Male</div>
+            <div class="item" data-value="0">Female</div>
+        </div>
+      </div>
+
+
+
+
         <div class="field">
           <label>WHAT DO YOU WISH THE UNIVERSITY HAD THAT IT DOES NOT PROVIDE</label>
           <textarea></textarea>
         </div>
-
-          <!--  Did any of these factor into your decision to attend this school-->
-          <p><span class="multiple-select">DID ANY OF THESE FACTOR INTO YOUR DECISION TO ATTEND THIS SCHOOL?</span></p>
-          <div class="ui equal width center aligned padded grid selection">
-              <div class="row selection-outer">
-                <div class="column selection-padding">
-                  Specific Program
-                </div>
-                <div class="column selection-padding selection-inner">
-                  Sports
-                </div>
-                <div class="column selection-padding">
-                  Location
-                </div>
-              </div>
-              <div class="row">
-                <div class="column selection-padding">
-                  Finances
-                </div>
-                <div class="column selection-padding selection-inner">
-                  University Sports
-                </div>
-                <div class="column selection-padding">
-                  Friends / Family
-                </div>
-              </div>
-            </div>
 
           <!--  What do you wish the school had that it does not provide-->
           <p><span class="multiple-select">WHAT DO YOU WISH THE SCHOOL HAD THAT IT DOES NOT PROVIDE?</span></p>
@@ -152,5 +146,8 @@
         <a href="career_awareness.html">NEXT</a>
     </button>
   </div>
+
+
+  <script type="text/javascript" rel="script" src="/assets/js/main.js"></script>
 </body>
 </html>
