--- a/question_set_one_a.html
+++ b/question_set_one_a.html
@@ -74,11 +74,12 @@
       </div>
       <!-- Question two -->
       <div class="field">
-          <label>WHAT WAS THE DEFINING FACTOR IN YOUR DECISION TO ATTEND THIS UNIVERSITY?</label>
-          <textarea></textarea>
-        </div>
+        <label>WHAT WAS THE DEFINING FACTOR IN YOUR DECISION TO ATTEND THIS UNIVERSITY?</label>
+        <textarea></textarea>
+      </div>
         <!-- Question three -->
         <!--  Did any of these factor into your decision to attend this school-->
+      <div class="field">
         <p><span class="multiple-select">DID ANY OF THESE FACTORS INFLUENCE YOUR DECISION TO ATTEND THIS UNIVERSITY?</span></p>
         <div class="ui equal width center aligned padded grid selection">
           <div class="ui dropdown">
@@ -86,7 +87,8 @@
             <i class="dropdown icon"></i>
           </div>
         </div>
-          <!-- Question four -->
+      </div>
+        <!-- Question four -->
         <div class="field">
           <label>WHAT IS ONE RESOURCE YOUR WISH YOUR COLLEGE WOULD ROVIDE TO AID YOUR EDUCATION?</label>
           <textarea></textarea>
