--- a/internships_d.html
+++ b/internships_d.html
@@ -62,14 +62,19 @@
 
 <div class="ui container center">
   <h2>
-    EXPOSURE
+    INTERNSHIPS
   </h2>
   <div class="ui eight column centered grid">
     <form class="ui form">
       <!-- Question one -->
       <div class="field">
+        <label>WHAT IS YOUR PROFESSION OF CHOICE?</label>
+        <input type="text">
+      </div>
+      <!-- Question two -->
+      <div class="field">
         <p><span class="multiple-select">IT IS IMPORTANT TO BE OPEN TO DIVERSITY IN ORDER TO SUCCEED AS AN INDIVIDUAL AND PROFESSIONALY</span></p>
-        <!-- Scale of 1-5 -->
+          <!-- Passion, Monetery Value, Familial Obligation, Familial Motivation, Other -->
         <div class="ui equal width center aligned padded grid selection">
           <div class="ui dropdown">
             <div class="text"></div>
@@ -77,16 +82,25 @@
           </div>
         </div>
       </div>
-      <!-- Question two -->
+      <!-- Question three -->
       <div class="field">
-        <p><span class="multiple-select">IT IS IMPORTANT TO BE OPEN TO DIVERSITY IN ORDER TO SUCCEED AS AN INDIVIDUAL AND PROFESSIONALY</span></p>
-        <!-- Study abroad, active service trip, both, neither -->
-        <div class="ui equal width center aligned padded grid selection">
-          <div class="ui dropdown">
-            <div class="text"></div>
-            <i class="dropdown icon"></i>
-          </div>
-        </div>
+        <label>LIST UP TO FIVE JOBS IN YOUR INDUSTRY YOU HAVE AN INTEREST IN PURSUING</label>
+        <textarea></textarea>
+      </div>
+      <!-- Question FOUR -->
+      <div class="field">
+        <label>LIST THE TOP THREE STRENGTHS YOU BELIEVE YOU POSSES THAT WILL HELP YOU BE SUCCESSFUL IN YOUR CAREER</label>
+        <textarea></textarea>
+      </div>
+      <!-- Question FIVE -->
+      <div class="field">
+        <label>LIST THE TOP THREE WEAKNESS YOU BELIEVE YOU POSSES THAT WILL HURT YOU IN YOUR CAREER</label>
+        <textarea></textarea>
+      </div>
+      <!-- Question SIX -->
+      <div class="field">
+        <label>IF YOU COULD HAVE DINNER WITH SOMEONE FROM YOUR INDUSTRY, DEAD OR ALIVE, WHO WOULD IT BE AND WHY?</label>
+        <textarea></textarea>
       </div>
     </form>
   </div>
