--- a/internships_d.html
+++ b/internships_d.html
@@ -106,7 +106,7 @@
   </div>
   <div class="ui four column centered grid">
     <button class="ui primary button next">
-        <a href="career_awareness.html">NEXT</a>
+        <a href="network_a.html">NEXT</a>
     </button>
   </div>
 </div>
