--- a/involvement_d.html
+++ b/involvement_d.html
@@ -62,43 +62,55 @@
 
 <div class="ui container center">
   <h2>
-    AWARENESS
+    INVOLVEMENT
   </h2>
   <div class="ui eight column centered grid">
     <form class="ui form">
       <!-- Question one -->
       <div class="field">
-        <label>TELL US ABOUT YOUR MENTORSHIP EXPERIENCES TO DATE</label>
-        <textarea></textarea>
+        <label>WERE YOU PART OF AN AFTER-SCHOOL ACTIVITY IN HIGH SCHOOL?</label>
+        <button class="ui secondary button" type="button" name="yes-button">Yes</button>
+        <button class="ui secondary button" type="button" name="no-button">NO</button>
       </div>
-      <!-- Question two -->
+      <!-- Question TWO -->
       <div class="field">
-        <p><span class="multiple-select">HOW IMPORTANT DO YOU THINK IT IS TO HAVE A MENTOR?</span></p>
-        <!-- Scale of 1-5 -->
+        <label>HOW MANY ON/OFF-CAMPUS CAREER-ORIENTED PROJECTS, VOLUNTEER SERVICE, SPORTS TEAMS, ETC ORGANIZATIONS ARE YOU A PART OF AT YOUR UNIVERISTY?</label>
+        <input type="text">
+      </div>
+      <!-- Question THREE -->
+      <div class="field">
+        <label>I PLAN ON BECOMING PART OF MORE ON-CAMPUS, COMMUNITY, OR CAREER-RELATED CLUBS/ORGANIZATION AT MY UNIVERISTY?</label>
+        <button class="ui secondary button" type="button" name="yes-button">Yes</button>
+        <button class="ui secondary button" type="button" name="no-button">NO</button>
+      </div>
+      <!-- Question FOUR -->
+      <div class="field">
+        <p><span class="multiple-select">WHAT TYPE OF CLUB/ORGANIZATION INTERESTS YOU, CHOOSE ONE FROM EACH MENU</span></p>
+          <!-- Passion, Monetery Value, Familial Obligation, Familial Motivation, Other -->
         <div class="ui equal width center aligned padded grid selection">
+          <div class="ui dropdown">
+            <div class="text"></div>
+            <i class="dropdown icon"></i>
+          </div>
+          <div class="ui dropdown">
+            <div class="text"></div>
+            <i class="dropdown icon"></i>
+          </div>
           <div class="ui dropdown">
             <div class="text"></div>
             <i class="dropdown icon"></i>
           </div>
         </div>
       </div>
-      <!-- Question three -->
-      <div class="field">
-        <label>IN YOUR OPINION DESCRIBE THE QUALITIES A GOOD MENTOR POSSESSES</label>
-        <textarea></textarea>
-      </div>
-      <div class="field">
-        <label>HOW MANY MENTORS DO YOU PLAN ON HAVING BEFORE YOU GRADUATE?</label>
-        <input type="text">
-      </div>
     </form>
   </div>
   <div class="ui four column centered grid">
     <button class="ui primary button next">
-        <a href="exposure_a.html">NEXT</a>
+        <a href="career_awareness.html">NEXT</a>
     </button>
   </div>
 </div>
+
 
 </body>
 </html>
