--- a/mentorship_a.html
+++ b/mentorship_a.html
@@ -72,8 +72,8 @@
               <!-- Question one -->
               <div class="field">
                 <label>WAS THIS UNIVERSITY YOUR FIRST CHOICE?</label>
-                <button class="ui secondary button" type="button" name="yes-button">Yes</button>
-                <button class="ui secondary button" type="button" name="no-button">no</button>
+                <button class="ui secondary button" type="button" name="yes-button"><a href="mentorship_d.html">YES</a></button>
+                <button class="ui secondary button" type="button" name="no-button"><a href="mentorship_d.html">NO</a></button>
               </div>
         </div>
         <div class="eight wide column center">
