--- a/network_a.html
+++ b/network_a.html
@@ -72,8 +72,8 @@
               <!-- Question one -->
               <div class="field">
                 <label>HAVE YOU EVER ATTENDED A NETOWRKING EVENT?</label>
-                <button class="ui secondary button" type="button" name="yes-button">Yes</button>
-                <button class="ui secondary button" type="button" name="no-button">NO</button>
+                <button class="ui secondary button" type="button" name="yes-button"><a href="network_d.html">YES</a></button>
+                <button class="ui secondary button" type="button" name="no-button"><a href="network_d.html">NO</a></button>
               </div>
         </div>
         <div class="eight wide column center">
