--- a/career_awareness.html
+++ b/career_awareness.html
@@ -84,7 +84,7 @@
         <input type=text name="top-three-skills">
       </div>
       <button class="ui primary button next">
-          <a href="career_awareness.html">NEXT</a>
+          <a href="mentorship_a.html">NEXT</a>
       </button>
 
       <script type="text/javascript" rel="script" src="assets/js/main.js"></script>
