--- a/exposure_d.html
+++ b/exposure_d.html
@@ -92,7 +92,7 @@
   </div>
   <div class="ui four column centered grid">
     <button class="ui primary button next">
-        <a href="career_awareness.html">NEXT</a>
+        <a href="internships_a.html">NEXT</a>
     </button>
   </div>
 </div>
