--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="eight wide column center">
             <button class="ui primary button">
-                <a href="assets/views/about_you.html">READY TO BEGIN?</a>
+                <a href="about_you.html">READY TO BEGIN?</a>
             </button>
         </div>
     </div>
