--- a/career-path.html
+++ b/career-path.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous" />    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js" integrity="sha256-t8GepnyPmw9t+foMh3mKNvcorqNHamSKtKRxxpUEgFI=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/mentorship-a.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/career-path.css" type="text/css">
     <!-- Start of Async Drift Code -->
     <script>
         "use strict";
@@ -41,7 +41,6 @@
     </script>
     <!-- End of Async Drift Code -->
 </head>
-
 <body>
 <div class="ui secondary pointing menu">
     <a class="item">
@@ -61,23 +60,53 @@
     </div>
 </div>
 
-<div class="content-wrapper">
-    <div class="ui grid">
-        <div class="eight wide column center">
-          <h2>EXPOSURE</h2>
-            <p>
-              We want to learn more about your experience with study abroad programs and active service trips.
-            </p>
-            <form class="ui form">
-              <!-- Question one -->
-              <div class="field">
-                <label>HAVE YOU EVER CONSIDERED PARTICIPATING IN A STUDY ABROAD OR ACTIVE SERVICE PROGRAM?</label>
-                <button class="ui secondary button" type="button" name="yes-button"><a href="exposure_d.html">YES</a></button>
-                <button class="ui secondary button" type="button" name="no-button"><a href="exposure_d.html">NO</a></button>
-              </div>
+<div class="hero">
+    <div class="content-wrapper">
+        <div class="ui grid">
+            <div class="eight wide column center">
+                <h1>CHOOSE YOUR PATH</h1>
+            </div>
+            <div class="eight wide column center">
+                <h1>STEP #2</h1>
+            </div>
         </div>
-        <div class="eight wide column center">
-            <img src="assets\img\Executive Menber.png" alt="">
+    </div>
+</div>
+
+<div class="content-wrapper center">
+    <div class="ui grid">
+        <div class="row">
+            <div name="ba" class="path-container">
+                <p> ENTREPRENEURSHIP </p>
+            </div>
+            <div name="bb" class="path-container">
+                <p> GAP YEAR </p>
+            </div>
+            <div name="bc" class="path-container">
+                <p> MASTERS / DOCTORATE </p>
+            </div>
+            <div name="bd" class="path-container">
+                <p> LAW SCHOOL </p>
+            </div>
+        </div>
+        <div class="row">
+            <div name="be" class="path-container">
+                <p> PHD </p>
+            </div>
+            <div name="bf" class="path-container">
+                <p> MILITARY </p>
+            </div>
+            <div name="bg" class="path-container">
+                <p> MEDICAL SCHOOL </p>
+            </div>
+            <div name="bh" class="path-container">
+                <p> CORPORATE AMERICA </p>
+            </div>
+        </div>
+        <div class="row">
+            <button id="careerButton" class="ui primary button">
+                <a href="questionnare.html">NEXT SECTION</a>
+            </button>
         </div>
     </div>
 </div>
