--- a/exposure-a.html
+++ b/exposure-a.html
@@ -64,20 +64,20 @@
 <div class="content-wrapper">
     <div class="ui grid">
         <div class="eight wide column center">
-          <h2>MENTORSHIP</h2>
+          <h2>EXPOSURE</h2>
             <p>
-              Mentors play an important role in helping you learn about your and make decisions about your future.
+              We want to learn more about your experience with study abroad programs and active service trips.
             </p>
             <form class="ui form">
               <!-- Question one -->
               <div class="field">
-                <label>WAS THIS UNIVERSITY YOUR FIRST CHOICE?</label>
-                <button class="ui secondary button" type="button" name="yes-button"><a href="mentorship_d.html">YES</a></button>
-                <button class="ui secondary button" type="button" name="no-button"><a href="mentorship_d.html">NO</a></button>
+                <label>HAVE YOU EVER CONSIDERED PARTICIPATING IN A STUDY ABROAD OR ACTIVE SERVICE PROGRAM?</label>
+                <button class="ui secondary button" type="button" name="ga"><a href="exposure-d.html">YES</a></button>
+                <button class="ui secondary button" type="button" name="gb"><a href="exposure-d.html">NO</a></button>
               </div>
         </div>
         <div class="eight wide column center">
-            <img src="assets\img\Mentor.png" alt="">
+            <img src="assets\img\Executive Menber.png" alt="">
         </div>
     </div>
 </div>
