--- a/questionnare.html
+++ b/questionnare.html
@@ -89,7 +89,7 @@
         </div>
         <div class="eight wide column center">
             <button class="ui primary button">
-                <a href="question_set_one_a.html">CONTINUE</a>
+                <a href="awareness.html">CONTINUE</a>
             </button>
         </div>
     </div>
