--- a/awareness.html
+++ b/awareness.html
@@ -62,40 +62,84 @@
 
 <div class="ui container center">
   <h2>
-    EXPOSURE
+    AWARENESS
   </h2>
   <div class="ui eight column centered grid">
     <form class="ui form">
       <!-- Question one -->
       <div class="field">
-        <p><span class="multiple-select">IT IS IMPORTANT TO BE OPEN TO DIVERSITY IN ORDER TO SUCCEED AS AN INDIVIDUAL AND PROFESSIONALY</span></p>
-        <!-- Scale of 1-5 -->
-        <div class="ui equal width center aligned padded grid selection">
-          <div class="ui dropdown">
-            <div class="text"></div>
-            <i class="dropdown icon"></i>
-          </div>
-        </div>
+        <label>WAS THIS UNIVERSITY YOUR FIRST CHOICE?</label>
+        <button class="ui secondary button" type="button" name="ca">Yes</button>
+        <button class="ui secondary button" type="button" name="cb">no</button>
       </div>
       <!-- Question two -->
       <div class="field">
-        <p><span class="multiple-select">IT IS IMPORTANT TO BE OPEN TO DIVERSITY IN ORDER TO SUCCEED AS AN INDIVIDUAL AND PROFESSIONALY</span></p>
-        <!-- Study abroad, active service trip, both, neither -->
-        <div class="ui equal width center aligned padded grid selection">
-          <div class="ui dropdown">
-            <div class="text"></div>
-            <i class="dropdown icon"></i>
+        <label>WHAT WAS THE DEFINING FACTOR IN YOUR DECISION TO ATTEND THIS UNIVERSITY?</label>
+        <textarea name="cc"></textarea>
+      </div>
+        <!-- Question three -->
+        <!--  Did any of these factor into your decision to attend this school-->
+        <div class="field">
+        <p>DID ANY OF THESE FACTORS INLFUENCE YOUR DECISION TO ATTEND THIS UNIVERSITY?</p>
+        <div class="ui selection dropdown">
+          <input type="hidden" name="cd">
+          <i class="dropdown icon"></i>
+          <div class="default text">Resources</div>
+          <div class="menu">
+            <div class="item" data-value="5">Other</div>
+            <div class="item" data-value="5">Affiliation</div>
+            <div class="item" data-value="4">University Support</div>
+            <div class="item" data-value="3">Finances</div>
+            <div class="item" data-value="2">Location</div>
+            <div class="item" data-value="1">Sports</div>
+            <div class="item" data-value="0">Specific Program</div>
           </div>
         </div>
       </div>
-    </form>
-  </div>
+        <!-- Question four -->
+        <div class="field">
+          <label>WHAT IS ONE RESOURCE YOUR WISH YOUR COLLEGE WOULD PROVIDE TO AID YOUR EDUCATION?</label>
+          <textarea name="ce"></textarea>
+        </div>
+        <!-- Question five -->
+        <div class="field">
+        <p>WHAT DO YOU WISH THE SCHOOL HAD THAT IT DOES NOT PROVIDE?</p>
+        <div class="ui selection dropdown">
+          <input type="hidden" name="cf">
+          <i class="dropdown icon"></i>
+          <div class="default text">Resources</div>
+          <div class="menu">
+            <div class="item" data-value="5">Other</div>
+            <div class="item" data-value="5">Affiliation</div>
+            <div class="item" data-value="4">University Support</div>
+            <div class="item" data-value="3">Finances</div>
+            <div class="item" data-value="2">Location</div>
+            <div class="item" data-value="1">Sports</div>
+            <div class="item" data-value="0">Specific Program</div>
+          </div>
+        </div>
+      </div>
+        <!-- Question six -->
+        <div class="field">
+        <p>MY FAMILY PLAYED A ROLE IN MY DECISION TO ATTEND THIS UNIVERSITY</p>
+        <div class="ui selection dropdown">
+          <input type="hidden" name="cg">
+          <i class="dropdown icon"></i>
+          <div class="default text">Resources</div>
+          <div class="menu">
+            <div class="item" data-value="3">Neither</div>
+            <div class="item" data-value="2">Both</div>
+            <div class="item" data-value="1">They supported my decision</div>
+            <div class="item" data-value="0">They influenced my decision</div>
+            </div>
+          </div>
+
   <div class="ui four column centered grid">
     <button class="ui primary button next">
-        <a href="internships_a.html">NEXT</a>
+        <a href="career-awareness.html">NEXT</a>
     </button>
   </div>
-</div>
 
+  <script type="text/javascript" rel="script" src="assets/js/main.js"></script>
 </body>
 </html>
