--- a/exposure-d.html
+++ b/exposure-d.html
@@ -62,18 +62,13 @@
 
 <div class="ui container center">
   <h2>
-    AWARENESS
+    EXPOSURE
   </h2>
   <div class="ui eight column centered grid">
     <form class="ui form">
       <!-- Question one -->
       <div class="field">
-        <label>TELL US ABOUT YOUR MENTORSHIP EXPERIENCES TO DATE</label>
-        <textarea></textarea>
-      </div>
-      <!-- Question two -->
-      <div class="field">
-        <p><span class="multiple-select">HOW IMPORTANT DO YOU THINK IT IS TO HAVE A MENTOR?</span></p>
+        <p><span class="multiple-select">IT IS IMPORTANT TO BE OPEN TO DIVERSITY IN ORDER TO SUCCEED AS AN INDIVIDUAL AND PROFESSIONALY</span></p>
         <!-- Scale of 1-5 -->
         <div class="ui equal width center aligned padded grid selection">
           <div class="ui dropdown">
@@ -82,20 +77,22 @@
           </div>
         </div>
       </div>
-      <!-- Question three -->
+      <!-- Question two -->
       <div class="field">
-        <label>IN YOUR OPINION DESCRIBE THE QUALITIES A GOOD MENTOR POSSESSES</label>
-        <textarea></textarea>
-      </div>
-      <div class="field">
-        <label>HOW MANY MENTORS DO YOU PLAN ON HAVING BEFORE YOU GRADUATE?</label>
-        <input type="text">
+        <p><span class="multiple-select">I AM INTERESTED IN PARTICIPATING IN THE FOLLOWING DURING MY COLLEGE EXPERIENCE</span></p>
+        <!-- Study abroad, active service trip, both, neither -->
+        <div class="ui equal width center aligned padded grid selection">
+          <div class="ui dropdown">
+            <div class="text"></div>
+            <i class="dropdown icon"></i>
+          </div>
+        </div>
       </div>
     </form>
   </div>
   <div class="ui four column centered grid">
     <button class="ui primary button next">
-        <a href="exposure_a.html">NEXT</a>
+        <a href="internships_a.html">NEXT</a>
     </button>
   </div>
 </div>
