Name atr added to all inputs & Dropdown menus styled

--- a/career-awareness.html
+++ b/career-awareness.html
@@ -76,10 +76,10 @@
         <p>WHICH OF THE FOLLOWING HAVE YOU STARTED?</p>
         <select name="dc" multiple="" class="ui fluid dropdown">
           <option value="">Select All That Apply</option>
-          <option value="angular">Cover Letter</option>
-          <option value="css">CV</option>
-          <option value="design">LinkedIn</option>
-          <option value="design">Resume</option>
+          <option value="Cover">Cover Letter</option>
+          <option value="CV">CV</option>
+          <option value="LinkedIn">LinkedIn</option>
+          <option value="Resume">Resume</option>
         </select>
       </div>
       <div class="field">
