--- a/networking-a.html
+++ b/networking-a.html
@@ -64,20 +64,20 @@
 <div class="content-wrapper">
     <div class="ui grid">
         <div class="eight wide column center">
-          <h2>INTERNSHIPS</h2>
+          <h2>NETWORKING</h2>
             <p>
-              We want to learn more about your experience with internships and co-ops.
+              We want to learn more about your experience with networking with other students and professionals.
             </p>
             <form class="ui form">
               <!-- Question one -->
               <div class="field">
-                <label>HAVE YOU HAD ANY INTERNSHIPS?</label>
-                <button class="ui secondary button" type="button" name="yes-button"><a href="internships_d.html">YES</a></button>
-                <button class="ui secondary button" type="button" name="no-button"><a href="internships_d.html">NO</a></button>
+                <label>HAVE YOU EVER ATTENDED A NETOWRKING EVENT?</label>
+                <button class="ui secondary button" type="button" name="ka"><a href="networking-d.html">YES</a></button>
+                <button class="ui secondary button" type="button" name="kb"><a href="networking-d.html">NO</a></button>
               </div>
         </div>
         <div class="eight wide column center">
-            <img src="assets\img\internship-blog-post-image@2x.png" alt="">
+            <img src="assets\img\networking.png" alt="">
         </div>
     </div>
 </div>
