--- a/exposure-d.html
+++ b/exposure-d.html
@@ -70,10 +70,16 @@
       <div class="field">
         <p><span class="multiple-select">IT IS IMPORTANT TO BE OPEN TO DIVERSITY IN ORDER TO SUCCEED AS AN INDIVIDUAL AND PROFESSIONALY</span></p>
         <!-- Scale of 1-5 -->
-        <div class="ui equal width center aligned padded grid selection">
-          <div class="ui dropdown">
-            <div class="text"></div>
-            <i class="dropdown icon"></i>
+        <div class="ui selection dropdown">
+          <input type="hidden" name="ha">
+          <i class="dropdown icon"></i>
+          <div class="default text">Select One</div>
+          <div class="menu">
+            <div class="item" data-value="4">5 - Most Important</div>
+            <div class="item" data-value="3">4</div>
+            <div class="item" data-value="2">3</div>
+            <div class="item" data-value="1">2</div>
+            <div class="item" data-value="0">1 - Not important at all</div>
           </div>
         </div>
       </div>
@@ -81,10 +87,15 @@
       <div class="field">
         <p><span class="multiple-select">I AM INTERESTED IN PARTICIPATING IN THE FOLLOWING DURING MY COLLEGE EXPERIENCE</span></p>
         <!-- Study abroad, active service trip, both, neither -->
-        <div class="ui equal width center aligned padded grid selection">
-          <div class="ui dropdown">
-            <div class="text"></div>
-            <i class="dropdown icon"></i>
+        <div class="ui selection dropdown">
+          <input type="hidden" name="hb">
+          <i class="dropdown icon"></i>
+          <div class="default text">Select One</div>
+          <div class="menu">
+            <div class="item" data-value="3">Study Abroad</div>
+            <div class="item" data-value="2">Active Service Trip</div>
+            <div class="item" data-value="1">Both</div>
+            <div class="item" data-value="0">Neither</div>
           </div>
         </div>
       </div>
@@ -92,10 +103,12 @@
   </div>
   <div class="ui four column centered grid">
     <button class="ui primary button next">
-        <a href="internships_a.html">NEXT</a>
+        <a href="internships-a.html">NEXT</a>
     </button>
   </div>
 </div>
+
+<script type="text/javascript" rel="script" src="assets/js/main.js"></script>
 
 </body>
 </html>
