--- a/networking-d.html
+++ b/networking-d.html
@@ -70,10 +70,16 @@
       <div class="field">
         <p><span class="multiple-select">IT IS IMPORTANT TO BEGIN NETWORKING EARLY IN MY COLLEGE CAREER</span></p>
         <!-- Scale of 1-5 -->
-        <div class="ui equal width center aligned padded grid selection">
-          <div class="ui dropdown">
-            <div class="text"></div>
-            <i class="dropdown icon"></i>
+        <div class="ui selection dropdown">
+          <input type="hidden" name="la">
+          <i class="dropdown icon"></i>
+          <div class="default text">Select One</div>
+          <div class="menu">
+            <div class="item" data-value="4">5 - Most Important</div>
+            <div class="item" data-value="3">4</div>
+            <div class="item" data-value="2">3</div>
+            <div class="item" data-value="1">2</div>
+            <div class="item" data-value="0">1 - Not important at all</div>
           </div>
         </div>
       </div>
@@ -81,38 +87,50 @@
       <div class="field">
         <p><span class="multiple-select">NETWORKING IS ESSENTIAL TO MY CAREER GROWTH AND PROFESSIONAL DEVELOPMENT</span></p>
         <!-- Scale of 1-5 -->
-        <div class="ui equal width center aligned padded grid selection">
-          <div class="ui dropdown">
-            <div class="text"></div>
-            <i class="dropdown icon"></i>
+        <div class="ui selection dropdown">
+          <input type="hidden" name="lb">
+          <i class="dropdown icon"></i>
+          <div class="default text">Select One</div>
+          <div class="menu">
+            <div class="item" data-value="4">5 - Most Important</div>
+            <div class="item" data-value="3">4</div>
+            <div class="item" data-value="2">3</div>
+            <div class="item" data-value="1">2</div>
+            <div class="item" data-value="0">1 - Not important at all</div>
           </div>
         </div>
       </div>
       <!-- Question THREE -->
       <div class="field">
         <label>DO YOU FEEL COMFORTABLE NETOWRKING WITH A PROFESSIONAL?</label>
-        <button class="ui secondary button" type="button" name="yes-button">Yes</button>
-        <button class="ui secondary button" type="button" name="no-button">NO</button>
+        <button class="ui secondary button" type="button" name="lc">Yes</button>
+        <button class="ui secondary button" type="button" name="ld">NO</button>
       </div>
       <!-- Question FOUR -->
       <div class="field">
         <p><span class="multiple-select">WHAT TYPES OF NETWORKING EVENTS HAVE YOU ATTENDED?</span></p>
         <!-- Professional Conferences, Industry Specific Speaking Engagements, Roundtable Events, LinkedIn/Online groups, Meetup.com Events, Career Fairs, Other, None of the above -->
-        <div class="ui equal width center aligned padded grid selection">
-          <div class="ui dropdown">
-            <div class="text"></div>
-            <i class="dropdown icon"></i>
-          </div>
-        </div>
+        <select name="le" multiple="" class="ui fluid dropdown">
+          <option value="">Select All That Apply</option>
+          <option value="Confernece">Professional Conferneces</option>
+          <option value="Speaking">Industry Specific Speaking Engagements</option>
+          <option value="Roundtable">Roundtable Events</option>
+          <option value="Online">LinkedIn / Online Groups</option>
+          <option value="Meetup.com Events">Meetup.com Events</option>
+          <option value="Career Fair">Career Fairs</option>
+          <option value="Other">Other</option>
+          <option value="None">None</option>
+        </select>
       </div>
     </form>
   </div>
   <div class="ui four column centered grid">
     <button class="ui primary button next">
-        <a href="involvement_a.html">NEXT</a>
+        <a href="involvement-a.html">NEXT</a>
     </button>
   </div>
 </div>
 
+<script type="text/javascript" rel="script" src="assets/js/main.js"></script>
 </body>
 </html>
