--- a/thank-you.html
+++ b/thank-you.html
@@ -7,11 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="http://example.com/favicon.png">
     <title>REZZIO</title>
-    <script src="lib/jquery-3.3.1.min.js" type="text/javascript" rel="script"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous" />    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js" integrity="sha256-t8GepnyPmw9t+foMh3mKNvcorqNHamSKtKRxxpUEgFI=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/career-path.css" type="text/css">
+    <script src="lib/jquery-3.3.1.min.js" type="text/javascript" rel="script"></script>
     <!-- Start of Async Drift Code -->
     <script>
         "use strict";
@@ -41,61 +39,47 @@
     </script>
     <!-- End of Async Drift Code -->
 </head>
+
 <body>
 <div class="ui secondary pointing menu">
-    <a class="item">
-        <img src="assets/img/Small_Icon.svg">
-        <p>REZZIO LEARNING</p>
-    </a>
-    <div class="right menu">
         <a class="item">
-            DASHBOARD
+            <img src="assets/img/Small_Icon.svg">
+            <p>REZZIO LEARNING</p>
         </a>
-        <a class="item">
-            ABOUT REZZIO
-        </a>
-        <a class="item">
-            CREATE PROFILE
-        </a>
-    </div>
+        <div class="right menu">
+            <a class="item">
+                DASHBOARD
+            </a>
+            <a class="item">
+                ABOUT REZZIO
+            </a>
+            <a class="item">
+                CREATE PROFILE
+            </a>
+        </div>
 </div>
 
 <div class="hero">
     <div class="content-wrapper">
-        <div class="ui grid">
-            <div class="eight wide column center">
-                <h1>CHOOSE YOUR PATH</h1>
-            </div>
-            <div class="eight wide column center">
-                <h1>STEP #2</h1>
-            </div>
-        </div>
+        <h1>THAT'S IT!</h1>
     </div>
 </div>
 
-<div class="content-wrapper center">
+<div class="content-wrapper">
+    <h2>THANK YOU FOR ALL OF YOUR HELP</h2>
+    <hr>
     <div class="ui grid">
-        <div class="row">
-          <p>WHICH OF THE FOLLOWING HAVE YOU STARTED?</p>
-          <select name="ba" multiple="" class="ui fluid dropdown">
-            <option value="">Select 3</option>
-            <option value="Entrepreneurship">Entrepreneurship</option>
-            <option value="Gap">Gap Year</option>
-            <option value="Masters">Masters / Doctorate</option>
-            <option value="Law">Law School</option>
-            <option value="PHD">PHD</option>
-            <option value="Military">Military</option>
-            <option value="Med">Medical School</option>
-            <option value="Corp">Corporate America</option>
-          </select>
-        </div>
-        <div class="row">
-            <button id="careerButton" class="ui primary button">
-                <a href="questionnare.html">NEXT SECTION</a>
-            </button>
-        </div>
+      <p>
+          Everyone on the REZZIO team wants to thank you for testing our program, your feedback will be integral to
+          our success moving forward. Our mission today is to learn how we can best design our career path questions
+          and user on-boarding process. Please keep two things in mind as you're going through our flow and filling
+          out your profile: 1) we are still very early in our development so there may be some bugs. If you find any
+          issues throughout your experience please let us know so we can address them and 2) as you progress, please
+          note any confusing screens, questions, or steps throughout the process.
+      </p>
     </div>
 </div>
+
 
 <script type="text/javascript" rel="script" src="assets/js/main.js"></script>
 </body>
