--- a/career-path.html
+++ b/career-path.html
@@ -76,7 +76,7 @@
 <div class="content-wrapper center">
     <div class="ui grid">
         <div class="row">
-          <p>WHICH OF THE FOLLOWING HAVE YOU STARTED?</p>
+          <p>CHOOSE 3 POTENTIAL CAREER PATHS</p>
           <select name="ba" multiple="" class="ui fluid dropdown">
             <option value="">Select 3</option>
             <option value="Entrepreneurship">Entrepreneurship</option>
