--- a/awareness.html
+++ b/awareness.html
@@ -67,22 +67,29 @@
   <div class="ui eight column centered grid">
     <form class="ui form">
       <!-- Question one -->
+      <p>WAS THIS UNIVERSITY YOUR FIRST CHOICE?</p>
       <div class="field">
-        <label>WAS THIS UNIVERSITY YOUR FIRST CHOICE?</label>
-        <button class="ui secondary button" type="button" name="ca">Yes</button>
-        <button class="ui secondary button" type="button" name="cb">no</button>
+        <div class="ui selection dropdown">
+            <input type="hidden" name="ca">
+            <i class="dropdown icon"></i>
+            <div class="default text">Yes / No</div>
+            <div class="menu">
+                <div class="item" data-value="Yes">Yes</div>
+                <div class="item" data-value="No">No</div>
+            </div>
+        </div>
       </div>
       <!-- Question two -->
       <div class="field">
         <label>WHAT WAS THE DEFINING FACTOR IN YOUR DECISION TO ATTEND THIS UNIVERSITY?</label>
-        <textarea name="cc"></textarea>
+        <textarea name="cb"></textarea>
       </div>
         <!-- Question three -->
         <!--  Did any of these factor into your decision to attend this school-->
         <div class="field">
         <p>DID ANY OF THESE FACTORS INLFUENCE YOUR DECISION TO ATTEND THIS UNIVERSITY?</p>
         <div class="ui selection dropdown">
-          <input type="hidden" name="cd">
+          <input type="hidden" name="cc">
           <i class="dropdown icon"></i>
           <div class="default text">Resources</div>
           <div class="menu">
@@ -99,13 +106,13 @@
         <!-- Question four -->
         <div class="field">
           <label>WHAT IS ONE RESOURCE YOUR WISH YOUR COLLEGE WOULD PROVIDE TO AID YOUR EDUCATION?</label>
-          <textarea name="ce"></textarea>
+          <textarea name="cd"></textarea>
         </div>
         <!-- Question five -->
         <div class="field">
         <p>WHAT DO YOU WISH THE SCHOOL HAD THAT IT DOES NOT PROVIDE?</p>
         <div class="ui selection dropdown">
-          <input type="hidden" name="cf">
+          <input type="hidden" name="ce">
           <i class="dropdown icon"></i>
           <div class="default text">Resources</div>
           <div class="menu">
@@ -123,7 +130,7 @@
         <div class="field">
         <p>MY FAMILY PLAYED A ROLE IN MY DECISION TO ATTEND THIS UNIVERSITY</p>
         <div class="ui selection dropdown">
-          <input type="hidden" name="cg">
+          <input type="hidden" name="cf">
           <i class="dropdown icon"></i>
           <div class="default text">Resources</div>
           <div class="menu">
