--- a/career-path.html
+++ b/career-path.html
@@ -90,9 +90,9 @@
           </select>
         </div>
         <div class="row">
-            <button id="careerButton" class="ui primary button">
-                <a href="questionnare.html">NEXT SECTION</a>
-            </button>
+          <div class="buttonClass light-blue">
+            <a href="questionnare.html">NEXT SECTION</a>
+          </div>
         </div>
     </div>
 </div>
