--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
             </p>
         </div>
         <div class="eight wide column center">
-            <button class="ui primary button">
-                <a href="about-you.html">READY TO BEGIN?</a>
-            </button>
+            <div class="buttonClass light-blue">
+              <a href="about-you.html">READY TO BEGIN?</a>
+
+            </div>
         </div>
     </div>
 </div>
