--- a/questionnare.html
+++ b/questionnare.html
@@ -88,9 +88,10 @@
             </p>
         </div>
         <div class="eight wide column center">
-            <button class="ui primary button">
-                <a href="awareness.html">CONTINUE</a>
-            </button>
+          <div class="buttonClass light-blue">
+              <a href="awareness.html">CONTINUE</a>
+
+          </div>
         </div>
     </div>
 </div>
