--- a/about-you.html
+++ b/about-you.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous" />    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js" integrity="sha256-t8GepnyPmw9t+foMh3mKNvcorqNHamSKtKRxxpUEgFI=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/about-you.css" type="text/css">
     <!-- Start of Async Drift Code -->
     <script>
         "use strict";
@@ -122,9 +121,9 @@
         </div>
         <div class="eight wide column center">
             <div class="row">
-                <button id="aboutButton" class="ui primary button">
-                    <a href="career-path.html">NEXT SECTION</a>
-                </button>
+              <div class="buttonClass light-blue moveDown">
+                <a href="career-path.html">NEXT SECTION</a>
+              </div>
             </div>
         </div>
     </div>
