--- a/awareness.html
+++ b/awareness.html
@@ -10,7 +10,6 @@
   <script src="lib/jquery-3.3.1.min.js" type="text/javascript" rel="script"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous" />    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js" integrity="sha256-t8GepnyPmw9t+foMh3mKNvcorqNHamSKtKRxxpUEgFI=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/main.css" type="text/css">
-  <link rel="stylesheet" href="assets/css/question_set_one.css" type="text/css">
   <!-- Start of Async Drift Code -->
   <script>
       "use strict";
@@ -142,9 +141,9 @@
           </div>
 
   <div class="ui four column centered grid">
-    <button class="ui primary button next">
-        <a href="career-awareness.html">NEXT</a>
-    </button>
+    <div class="buttonClass light-blue moveDown">
+      <a href="career-awareness.html">NEXT</a>
+    </div>
   </div>
 
   <script type="text/javascript" rel="script" src="assets/js/main.js"></script>
