--- a/career-awareness.html
+++ b/career-awareness.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js" integrity="sha256-t8GepnyPmw9t+foMh3mKNvcorqNHamSKtKRxxpUEgFI=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/main.css" type="text/css">
-  <link rel="stylesheet" href="assets/css/question_set_one.css" type="text/css">
   <!-- Start of Async Drift Code -->
   <script>
       "use strict";
@@ -97,9 +96,9 @@
     </form>
   </div>
 
-      <button class="ui primary button next">
-          <a href="mentorship-a.html">NEXT</a>
-      </button>
+  <div class="buttonClass light-blue moveDown">
+    <a href="mentorship-a.html">NEXT</a>
+  </div>
 </div>
       <script type="text/javascript" rel="script" src="assets/js/main.js"></script>
   </body>
